--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,22 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - print_pipeline_id
+  
+  error_job:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+       steps:
+      - run: exit 1
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
       
 
 workflows:
   my_workflow:
     jobs:
       - my_job
+      - error_job
+    
