--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,5 @@
 version: 2.1
 
-commands:
-  print_pipeline_id:
-    steps:
-      - run: echo ${CIRCLE_WORKFLOW_ID}
-
 jobs:
   build:
     docker:
@@ -12,18 +7,18 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - save_cache:
-          keys: "npm-packages"
-          paths:
-            - /src/node_modules
+      # - save_cache:
+      #     keys: "npm-packages"
+      #     paths:
+      #       - /src/node_modules
       - run: npm run lint
   test:
     docker:
       - image: cimg/node:13.8.0  
     steps:
       - checkout
-      - restore_cache:
-          keys: "npm-packages"
+      # - restore_cache:
+      #     keys: "npm-packages"
       - run: npm test
     
   analyze:
@@ -31,8 +26,8 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: "npm-packages"        
+      # - restore_cache:
+      #     keys: "npm-packages"        
 
 workflows:
   my_workflow:
